fixed styles on search page, results were not showing correctly

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -258,3 +258,7 @@ h6 {
     font-size: 26px;
   }
 }
+
+#found .scrollable-content {
+  top: 112px;
+}
